[gd_scene load_steps=6 format=3 uid="uid://ffbn76hhr08t"]

[ext_resource type="Script" uid="uid://bxs2bp28b15jy" path="res://UI/fade_canvas.gd" id="1_b21xw"]

[sub_resource type="Animation" id="Animation_nk5to"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_boysv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ppavw"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfvm8"]
_data = {
&"RESET": SubResource("Animation_boysv"),
&"fade_in": SubResource("Animation_ppavw"),
&"fade_out": SubResource("Animation_nk5to")
}

[node name="FadeCanvas" type="CanvasLayer"]
script = ExtResource("1_b21xw")

[node name="FadeColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="FadeColor"]
libraries = {
&"": SubResource("AnimationLibrary_sfvm8")
}

[connection signal="animation_finished" from="FadeColor/FadeAnimationPlayer" to="." method="_on_fade_animation_player_animation_finished"]
